--- a/android/apps/sendpics/AndroidManifest.xml
+++ b/android/apps/sendpics/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:label="@string/app_name"
         android:theme="@android:style/Theme.DeviceDefault.Dialog" >
        
-        <activity
+<!--         <activity
             android:name=".SendPicsActivity"
             android:label="@string/app_name" >
             <intent-filter>
@@ -27,7 +27,7 @@
             <meta-data android:name="sneer:tuple-type" android:value="picture" />
             <meta-data android:name="sneer:menu-caption" android:value="Send Pictures" />
             <meta-data android:name="sneer:menu-icon" android:resource="@drawable/ic_launcher" />
-        </activity>
+        </activity> -->
         <activity
             android:name=".ReceivePicsActivity"
             android:label="@string/title_activity_receive_pics" >
@@ -38,7 +38,7 @@
 
             <meta-data android:name="sneer:plugin-type" android:value="MESSAGE/VIEW" />
             <meta-data android:name="sneer:tuple-type" android:value="picture" />
-            <meta-data android:name="sneer:menu-caption" android:value="Send Pictures" />
+            <meta-data android:name="sneer:menu-caption" android:value="Receive Pictures" />
             <meta-data android:name="sneer:menu-icon" android:resource="@drawable/ic_launcher" />
         </activity>
     </application>
