--- a/android/apps/sendpics/AndroidManifest.xml
+++ b/android/apps/sendpics/AndroidManifest.xml
@@ -16,27 +16,17 @@
         android:label="@string/app_name"
         android:theme="@android:style/Theme.DeviceDefault.Dialog" >
        
-<!--         <activity
-            android:name=".SendPicsActivity"
-            android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-            </intent-filter>
 
-            <meta-data android:name="sneer:plugin-type" android:value="MESSAGE/COMPOSE" />
-            <meta-data android:name="sneer:tuple-type" android:value="picture" />
-            <meta-data android:name="sneer:menu-caption" android:value="Send Pictures" />
-            <meta-data android:name="sneer:menu-icon" android:resource="@drawable/ic_launcher" />
-        </activity> -->
         <activity
             android:name=".ReceivePicsActivity"
+            android:excludeFromRecents="true"
             android:label="@string/title_activity_receive_pics" >
             
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
             </intent-filter>
 
-            <meta-data android:name="sneer:plugin-type" android:value="MESSAGE/VIEW" />
+            <meta-data android:name="sneer:plugin-type" android:value="MESSAGE/COMPOSE" />
             <meta-data android:name="sneer:tuple-type" android:value="picture" />
             <meta-data android:name="sneer:menu-caption" android:value="Receive Pictures" />
             <meta-data android:name="sneer:menu-icon" android:resource="@drawable/ic_launcher" />
