--- a/android/apps/sendlocation/AndroidManifest.xml
+++ b/android/apps/sendlocation/AndroidManifest.xml
@@ -38,6 +38,7 @@
 		    <meta-data android:name="sneer:plugin-type" android:value="MESSAGE/VIEW" />
 		    <meta-data android:name="sneer:tuple-type" android:value="location" />
 		    <meta-data android:name="sneer:menu-icon" android:resource="@drawable/ic_launcher" />
+		    <meta-data android:name="sneer:notification-label" android:value="Location" />
 		    
         </activity>
         </application>
