--- a/android/android.main.tests/AndroidManifest.xml
+++ b/android/android.main.tests/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:targetPackage="sneer.android.tests" />
 
     <application
+        android:allowBackup="false"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <uses-library android:name="android.test.runner" />
