--- a/android/apps/sendlocation/AndroidManifest.xml
+++ b/android/apps/sendlocation/AndroidManifest.xml
@@ -7,14 +7,17 @@
     <uses-sdk
         android:minSdkVersion="16"
         android:targetSdkVersion="19" />
+    
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.Dialog" >
+        android:theme="@android:style/Theme.DeviceDefault.Dialog" >
         <activity
             android:name=".SendLocationActivity"
+            android:excludeFromRecents="true"
             android:label="@string/app_name" >
 
             <intent-filter>
