--- a/android/android.main.tests/build.gradle
+++ b/android/android.main.tests/build.gradle
@@ -17,6 +17,10 @@ dependencies {
 
 android {
 
+	dexOptions {
+        jumboMode = true
+    }
+
     lintOptions {
         abortOnError false
     }
