--- a/core/build.gradle
+++ b/core/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     }
     compile project(':keys')
     compile project(':java-api')
+    testCompile 'midje:midje:1.6.3'
 }
 
 uploadArchives {
