--- a/core/build.gradle
+++ b/core/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     	exclude group: 'com.google.protobuf', module: 'protobuf-java'
     	exclude group: 'com.lambdaworks', module: 'scrypt'
     }
+    compile project(':keys')
     compile project(':java-api')
 }
 
