--- a/android/apps/sendlocation/AndroidManifest.xml
+++ b/android/apps/sendlocation/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-sdk
         android:minSdkVersion="16"
         android:targetSdkVersion="19" />
-    
+
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
@@ -19,31 +19,23 @@
             android:name=".SendLocationActivity"
             android:excludeFromRecents="true"
             android:label="Searching for GPS..." >
-
             <intent-filter>
-		        <action android:name="android.intent.action.VIEW" />
-		    </intent-filter>
-		     
-		    <meta-data android:name="sneer:plugin-type" android:value="MESSAGE/COMPOSE" />
-		    <meta-data android:name="sneer:tuple-type" android:value="location" />
-		    <meta-data android:name="sneer:menu-caption" android:value="Location" />
-		    <meta-data android:name="sneer:menu-icon" android:resource="@drawable/ic_launcher" />
-		    
-        </activity>
-        <activity
-            android:name=".ViewLocationActivity"
-            android:label="@string/app_name" >
+                <action android:name="android.intent.action.VIEW" />
+            </intent-filter>
 
-            <intent-filter>
-		        <action android:name="android.intent.action.VIEW" />
-		    </intent-filter>
-		     
-		    <meta-data android:name="sneer:plugin-type" android:value="MESSAGE/VIEW" />
-		    <meta-data android:name="sneer:tuple-type" android:value="location" />
-		    <meta-data android:name="sneer:menu-icon" android:resource="@drawable/ic_launcher" />
-		    <meta-data android:name="sneer:notification-label" android:value="Location" />
-		    
+            <meta-data
+                android:name="sneer:plugin-type"
+                android:value="MESSAGE/COMPOSE" />
+            <meta-data
+                android:name="sneer:tuple-type"
+                android:value="location" />
+            <meta-data
+                android:name="sneer:menu-caption"
+                android:value="Location" />
+            <meta-data
+                android:name="sneer:menu-icon"
+                android:resource="@drawable/ic_launcher" />
         </activity>
-        </application>
+    </application>
 
 </manifest>
